--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       if (event.key === '2') {
         const newWindow = window.open('about:blank', '_blank');
         const iframe = document.createElement('iframe');
-        iframe.src = 'https://cloak.goguardian.cyou/';
+        iframe.src = 'https://jordan.chromebook.digital/';
         iframe.style.width = '100vw';
         iframe.style.height = '100vh';
         iframe.style.position = 'fixed';
