--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <iframe src="https://blocked.goguardian.com/?ctx=YWZpPTExOTkxNDY1JmFwaT0xMzI1MTMmb2k9MjQyMTQ3OTcxMzgmb3U9aHR0cHMlM0ElMkYlMkZkaXNjb3JkLmNvbSUyRmNoYW5uZWxzJTJGJTQwbWUmcnM9QURNSU5fU0lURV9GSUxURVImc3Q9Y2hyb21pdW0tbSZ2PTE%3D&sum=60e20e95" frameborder="0"></iframe>
+  <iframe src="https://blocked.goguardian.com/?ctx=b2k9MjQyMTQ3OTcxMzgmb3U9aHR0cHMlM0ElMkYlMkZjaHJvbWVib29rLmRpZ2l0YWwlMkYmcnM9QURNSU5fU0lURV9DQVRFR09SWV9GSUxURVImc2NpPTIyJnN0PWNocm9taXVtLW0mdj0x&sum=d7b156bb" frameborder="0"></iframe>
   <script>
     document.addEventListener('keydown', function(event) {
       if (event.key === '2') {
